backend/k8s/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: liiro-backend-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.liiro.io`) && PathPrefix(`/aiopscamp-liiro-api`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: liiro-backend-service
          port: 5012
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: liiro-backend-https
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.liiro.io`) && PathPrefix(`/aiopscamp-liiro-api`)
      kind: Rule
      services:
        - name: liiro-backend-service
          port: 5012
  tls:
    secretName: liiro-api-tls-cert
